crates/ferrum-interfaces/tests/ui/vnext/fail/operation_oracle_descriptor_is_not_deserialize.rs
use ferrum_interfaces::vnext::OperationOracleDescriptor;

fn main() {
    let _: OperationOracleDescriptor = serde_json::from_str("{}").unwrap();
}
